// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders correctly with minimal props 1`] = `
.c0 {
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.8rem;
  padding-right: 2.4rem;
  padding-left: 2.4rem;
  padding-top: 1.2rem;
  padding-bottom: 1.2rem;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  text-transform: Capitalize;
  border: 2px solid transparent;
  min-height: 5.4rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  line-height: 1.625;
  background: #36A93F;
  color: #FFFFFF;
  fill: #FFFFFF;
  min-width: 16rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 3px rgba(0,123,255,.3);
}

.c0:hover {
  background: #319639;
}

<div>
  <span
    class=""
  >
    <button
      class="c0"
      id="test-id"
      type=""
    >
      
    </button>
  </span>
</div>
`;

exports[`Button renders with props 1`] = `
.c1 {
  pointer-events: none;
  padding-left: 1rem;
  padding-right: 1rem;
  display: inherit;
}

.c0 {
  box-shadow: 0 0.5rem 0.5rem 0 rgba(0,0,0,.1);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 0.8rem;
  padding-right: 2.4rem;
  padding-left: 2.4rem;
  padding-top: 1.2rem;
  padding-bottom: 1.2rem;
  margin-bottom: 1.6rem;
  font-size: 1.8rem;
  text-transform: Capitalize;
  border: 2px solid transparent;
  min-height: 5.4rem;
  -webkit-transition: all 200ms ease-out;
  transition: all 200ms ease-out;
  font-weight: 700;
  line-height: 1.625;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  background: #36A93F;
  color: #FFFFFF;
  fill: #FFFFFF;
  min-width: 16rem;
  padding-top: 0.4rem;
  padding-bottom: 0.4rem;
}

.c0:focus {
  outline: none;
  box-shadow: 0 0 2px 3px rgba(0,123,255,.3);
}

.c0:hover {
  background: #319639;
}

<div>
  <span
    class=""
  >
    <button
      class="c0"
      id="test-id"
      type=""
    >
      <div
        class="c1"
      >
        <svg
          aria-hidden="true"
          class="svg-inline--fa fa-check fa-w-16 "
          data-icon="check"
          data-prefix="fas"
          focusable="false"
          role="img"
          style="font-size: 2rem;"
          viewBox="0 0 512 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M173.898 439.404l-166.4-166.4c-9.997-9.997-9.997-26.206 0-36.204l36.203-36.204c9.997-9.998 26.207-9.998 36.204 0L192 312.69 432.095 72.596c9.997-9.997 26.207-9.997 36.204 0l36.203 36.204c9.997 9.997 9.997 26.206 0 36.204l-294.4 294.401c-9.998 9.997-26.207 9.997-36.204-.001z"
            fill="currentColor"
          />
        </svg>
      </div>
      test content
    </button>
  </span>
</div>
`;
